--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "bugs": "https://github.com/gfscott/eleventy-plugin-youtube-embed/issues",
   "devDependencies": {
     "ava": "^3.8.2"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3"
   }
 }
